--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>caculator</title>
-    <link rel="stylesheet" href="calculator.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="calculator.js"></script>
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmOK5bMR--dP1NxfT2GDvVooBCNABWMorfkw&s" type="image/x-icon">
 </head>
